# vtx

./: .gitignore  Cargo.toml  README.md  install.sh
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  gpu_attach.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: cell.rs  config.rs  error.rs  ipc.rs  lib.rs  lua_config.rs  tmux_compat.rs  types.rs
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: hooks.rs  lib.rs  lua_plugin.rs  wasm_plugin.rs
crates/renderer-gpu/: Cargo.toml
crates/renderer-gpu/src/: atlas.rs  lib.rs
crates/renderer-gpu/src/shaders/: shader.wgsl
crates/renderer-tty/: Cargo.toml
crates/renderer-tty/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  pane.rs  server.rs  session.rs  status.rs  widget.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: grid.rs  lib.rs  parser.rs
examples/: catppuccin.lua  config.lua  devops.lua  dracula.lua  gruvbox.lua  minimal.lua  nord.lua  rose-pine.lua
examples/plugins/: devtools.lua  ide.lua  resurrect.lua  status.lua
