[package]
name = "vtx-server"
version.workspace = true
edition.workspace = true

[dependencies]
vtx-core = { workspace = true }
vtx-terminal = { workspace = true }
vtx-layout = { workspace = true }
tokio = { workspace = true }
portable-pty = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
libc = { workspace = true }
